# celestial-mihomo-client

./: .gitignore  .gitmodules  Cargo.toml  Changelog.md  README.md  SECURITY.md  eslint.config.ts  package.json  pnpm-lock.yaml  renovate.json
.devcontainer/: devcontainer-lock.json
.github/: README.md
.github/scripts/: checksum-assets.mjs  create-portable.mjs  (+4 more)
.old-github/: FUNDING.yml
crates/tauri-plugin-celestial-vpn/: .gitignore  Cargo.toml  build.rs
crates/tauri-plugin-celestial-vpn/android/: build.gradle.kts
crates/tauri-plugin-celestial-vpn/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-celestial-vpn/android/src/main/java/: CelestialVpnPlugin.kt  CelestialVpnService.kt
crates/tauri-plugin-celestial-vpn/golang/wrapper/: go.mod  go.sum  main.go
crates/tauri-plugin-celestial-vpn/permissions/: default.toml
crates/tauri-plugin-celestial-vpn/src/: ffi.rs  lib.rs  models.rs
docs/: Changelog.history.md  README_en.md  README_es.md  README_fa.md  README_ja.md  README_ko.md  README_ru.md
newdesign/: README.md  index.html  styles.css
newdesign2/: README.md  app.js  index.html  styles.css
scripts/: cleanup-unused-i18n.mjs  portable-fixed-webview2.mjs  portable.mjs  prebuild.mjs  telegram.mjs  updater-fixed-webview2.mjs  updater.mjs
scripts-workflow/: generate-tauri-latest-json.mjs  publish-autobuild-release.bash
src/: index.html  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.x64.json  webview2.x86.json
(+231 files in other folders)
